--- a/src/wrangle_act.ipynb
+++ b/src/wrangle_act.ipynb
@@ -6497,7 +6497,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Connection format: postgresql://username:password@localhost:port/database_name\n",
+    "# Default port is 5432\n",
+    "engine = create_engine('postgresql://postgres:YOUR_PASSWORD@localhost:5432/ETL_Warehouse')\n",
+    "\n",
+    "# To load your dataframes directly into the new warehouse:\n",
+    "# tweets.to_sql('tweets_table', engine, if_exists='replace', index=False)"
+   ]
   },
   {
    "cell_type": "code",
